<resources>
    <string name="app_name">ARtistic</string>
    <string name="tagline">Paint Your Reality</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_subtitle">Login to continue creating</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="create">Create</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>
    <string name="for_you">For You</string>
    <string name="following">Following</string>
    <string name="trending">Trending</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="view_in_ar">View in AR</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save_artwork">Save Artwork</string>
    <string name="artwork_title">Artwork Title</string>
    <string name="description">Description</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="clear">Clear</string>
    <string name="artworks">Artworks</string>
    <string name="followers">Followers</string>
    <string name="following_count">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="error_empty_username">Username cannot be empty</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_empty_email">Email cannot be empty</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_short_password">Password must be at least 6 characters</string>
    <string name="error_login_failed">Invalid username or password</string>
    <string name="error_username_exists">Username already exists</string>
</resources>