<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.artistic.ui.main.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <!-- Explore Fragment -->
    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.artistic.ui.main.explore.ExploreFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explore" />

    <!-- Gallery Fragment -->
    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.artistic.ui.main.gallery.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery" />

    <!-- Profile Fragment -->
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.artistic.ui.main.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>